# matter-rpi4-nRF52840-dongle

./: '  .gitignore  .gitmodules  .third_party  README.md  README.rst  genindex.html  index.html  objects.inv  package-lock.json  package.json  pyproject.toml  search.html  searchindex.js
.github/workflows/: avahi-utils.yml  docker.yml  docs-publish.yml  docs.yml  matter-environment.yml  nightly.yml  nrfconnect-chip.yml  nrfutil.yml  ot-commissioner.yml  ot-nrf528xx-environment.yml  otbr.yml  shellcheck.yml
_sources/: index.rst.txt
_sources/contributing/: documentation.rst.txt
_sources/first_steps/: getting_started.rst.txt
_static/: my_theme.css
advanced/: bootstrap_setup_scripts.html
components/: matter_thread_light.html  otbr.html
contributing/: conventional_commits.html  documentation.html  updating_dependencies.html
docs/source/: conf.py  index.rst
docs/source/advanced/: bootstrap_setup_scripts.rst
docs/source/components/: matter_thread_light.rst  otbr.rst
docs/source/contributing/: conventional_commits.rst  documentation.rst  updating_dependencies.rst
docs/source/first_steps/: getting_started.rst  introduction.rst
docs/source/troubleshooting/: bluetooth.rst  dns_sd.rst  nrfutil.rst
etc/docker/avahi-utils/: Dockerfile
etc/docker/chip-device-ctrl/: Dockerfile  entrypoint.sh
etc/docker/nrfutil/: Dockerfile
first_steps/: getting_started.html  introduction.html
script/: _common  bootstrap  build  setup
scripts/: docker-build  docker-build.sh  setup  setup.sh  update  update-submodules.sh
troubleshooting/: bluetooth.html
(+11 files in other folders)
