[tool.poetry]
name = "matter-rpi4-nRF52840-dongle"
version = "0.1.0"
description = "This project is a tech demonstration of building with Matter."
license = "CC0-1.0"
repository = "https://github.com/caubut-charter/matter-rpi4-nRF52840-dongle.git"
authors = ["Christopher Aubut <christopher.aubut@charter.com>"]

[tool.poetry.dependencies]
python = "^3.6"
sphinx-tabs = "^3.2.0"
Sphinx = "^4.2.*"
sphinx-rtd-theme = "^1.0.*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
